--- a/Salvation/war/Salvation.html
+++ b/Salvation/war/Salvation.html
@@ -4,12 +4,12 @@
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<link type="text/css" rel="stylesheet" href="Salvation.css">
 		<title>Diploma Defences Organiser</title>
-		<script type="text/javascript" language="javascript" src="stockwatcher/stockwatcher.nocache.js"></script>
+		<script type="text/javascript" language="javascript" src="salvation/salvation.nocache.js"></script>
 	</head>
 	<body>
 
 		<h1>Diploma Defences Organiser</h1>
-		<div id="Salvation"></div>
+		<div id="mainDiv"></div>
 		<iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
 		<noscript>
 			<div style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif">
